updated text to free range

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#" class="navbar-brand">Guess The Number</a>
     </nav>
     <main>
+      <h1>Simple & Easy</h1>
       <h1 class="banner p-3">1.2.3.</h1>
       <div class="form-group">
         <input
